[FIX] #1405 alignement des catégories

--- a/gallery/templates/gallery.css
+++ b/gallery/templates/gallery.css
@@ -122,6 +122,7 @@
 	display: none;
 }
 
-#module-gallery .subcat-content {
-	display: block;
+#module-gallery .subcat-element {
+	display: inline-block;
+	float: none;
 }
